# immich-minigames

./: .env.docker  .env.example  .gitignore  DOCKER.md  DOCKER_CHEATSHEET.md  LICENSE  README.md  docker-compose.app.yml  docker-compose.dev.yml  docker-compose.yml  docker-startup.sh
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_add_user_id_and_skin.py  0003_add_user_is_admin.py  0004_add_game_settings.py  0005_add_legacy_import_marker.py  0006_add_person_face_embedding_cache.py  c6728f83ad6e_create_initial_tables.py
backend/src/: config.py  main.py
backend/src/api/: admin_api.py  admin_games_api.py  api.py  auth_api.py  auth_schemas.py  deps.py  rate_limit.py  schemas.py
backend/src/application/: game_registry.py  games_bootstrap.py  session_service.py
backend/src/core/: constants.py
backend/src/domain/: album.py  asset.py  face.py  person.py
backend/tests/: conftest.py  test_admin_api.py  test_admin_bootstrap.py  test_admin_games_api.py  test_api_dateguessr.py  test_api_geoguessr.py  test_api_immichdle.py  test_api_more_or_less.py  test_api_persons.py  test_api_thumbnails.py  test_api_whos_that_person.py  test_asset_rounds.py  test_auth_api.py  test_auth_service.py  test_dateguessr_game.py  test_game_settings_service.py  test_games_service.py  test_geoguessr_game.py  test_immich_service.py  test_immichdle_game.py  test_legacy_migration.py  test_ml_service.py  test_more_or_less_game.py  test_whos_that_person_game.py
(+201 files in other folders)
