[project]
name = "immich-minigames-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2",
    "sqlalchemy>=2",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
