[project]
name = "immich-minigames-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2",
    "pyjwt>=2.13.0",
    "slowapi>=0.1.10",
    "sqlalchemy>=2",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
